# AivationSim

./: .gitignore  README.md
oa_rl/: README.md
oa_rl/outputs/2026-07-21/16-11-12/.hydra/: config.yaml  (+1 more)
oa_rl/scripts/: random_agent.py
oa_rl/scripts/rsl_rl/: train.py
oa_rl/source/oa_rl/: setup.py
oa_rl/source/oa_rl/config/: extension.toml
oa_rl/source/oa_rl/oa_rl/: __init__.py
precision_landing_ws/src/oa_bringup/: package.xml  setup.cfg  setup.py
precision_landing_ws/src/oa_bringup/config/: octomap_params.yaml
precision_landing_ws/src/oa_bringup/launch/: sim_obstacle_avoidance.launch.py
precision_landing_ws/src/oa_bringup/oa_bringup/: odom_to_tf_node.py
precision_landing_ws/src/oa_control/: package.xml  setup.cfg  setup.py
precision_landing_ws/src/oa_control/config/: control_params.yaml
precision_landing_ws/src/oa_control/oa_control/: path_follower_node.py
precision_landing_ws/src/oa_planning/: package.xml  setup.cfg  setup.py
precision_landing_ws/src/oa_vio/: package.xml  setup.cfg  setup.py
precision_landing_ws/src/pl_bringup/: package.xml  setup.cfg  setup.py
precision_landing_ws/src/pl_control/: package.xml  setup.cfg  setup.py
precision_landing_ws/src/pl_perception/: package.xml  setup.cfg  setup.py
scripts/: build_openvins.sh  hover_test.py  launch_sim.sh  link_gz_assets.sh
sim_assets/airframes/: 22000_gz_x500_3d_lidar
sim_assets/models/lidar_3d/: model.config  model.sdf
sim_assets/models/warehouse_pillar/: model.config  model.sdf
sim_assets/models/x500_3d_lidar/: model.config  model.sdf
sim_assets/worlds/: warehouse.sdf
(+184 files in other folders)
