<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oa_bringup</name>
  <version>0.1.0</version>
  <description>Launch and config files for the obstacle-avoidance simulation stack</description>
  <maintainer email="tnberkec@gmail.com">berke</maintainer>
  <license>MIT</license>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>oa_planning</exec_depend>
  <exec_depend>oa_control</exec_depend>
  <exec_depend>oa_vio</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>pl_perception</exec_depend>
  <!-- ov_msckf/ov_core/ov_init are built separately at ~/open_vins (not a
       rosdep-known package name), sourced as an underlay — see README. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
